InTrade 2.0.0
- Currency amounts are BigDecimal, TradeOffer uses BigDecimal as well (API change)
- Player file and escrow are saved at most four times a second instead of on every click
- /trade reload reads files off the main thread
- Database callbacks go through a main thread queue that is also drained on shutdown
- Trade counts are read after pending writes, placeholders no longer lag behind
- Sounds can be changed or turned off in config.yml
- An empty amount clears the currency, as the input hint says
- Javadoc for the API, shorter README